@@ -80,23 +80,21 @@ Description: oslo messaging library - Python 2.x
 
 Package: python3-oslo.messaging
 Architecture: all
-Depends: python-aioeventlet (>= 0.4),
-         python-amqp (>= 1.4.0),
-         python-concurrent.futures,
-         python-eventlet (>= 0.17.3),
-         python-kombu (>= 3.0.7),
-         python-oslo.config (>= 1:1.11.0),
-         python-oslo.context (>= 0.2.0),
-         python-oslo.i18n (>= 1.5.0),
-         python-oslo.middleware (>= 1.2.0),
-         python-oslo.serialization (>= 1.4.0),
-         python-oslo.utils (>= 1.4.0),
-         python-pbr,
-         python-six (>= 1.9.0),
-         python-stevedore (>= 1.3.0),
-         python-trollius,
-         python-yaml,
-         python-zmq,
+Depends: python3-aioeventlet (>= 0.4),
+         python3-amqp (>= 1.4.0),
+         python3-eventlet (>= 0.17.3),
+         python3-kombu (>= 3.0.7),
+         python3-oslo.config (>= 1:1.11.0),
+         python3-oslo.context (>= 0.2.0),
+         python3-oslo.i18n (>= 1.5.0),
+         python3-oslo.middleware (>= 1.2.0),
+         python3-oslo.serialization (>= 1.4.0),
+         python3-oslo.utils (>= 1.4.0),
+         python3-pbr,
+         python3-six (>= 1.9.0),
+         python3-stevedore (>= 1.3.0),
+         python3-yaml,
+         python3-zmq,
          ${misc:Depends},
          ${python3:Depends},
 Description: oslo messaging library - Python 3.x
@@ -110,8 +108,7 @@ Description: oslo messaging library - Python 3.x
 Package: oslo-messaging-zmq-receiver
 Architecture: all
 Depends: adduser,
-         python-oslo.messaging (= ${binary:Version}),
-         python-zmq,
+         python-oslo.messaging (= ${binary:Version}) | python3-oslo.messaging (= ${binary:Version}),
          ${misc:Depends},
 Description: Oslo Messaging ZeroMQ receiver daemon
  The Oslo Messaging API supports RPC and notifications over a number of
