@@ -1,0 +1,11 @@
+#!/bin/sh
+
+set -e
+
+if [ "$1" = "remove" ] || [ "$1" = "disappear" ] ; then
+	update-alternatives --remove oslo-messaging-zmq-receiver /usr/bin/python2-oslo-messaging-zmq-receiver
+fi
+
+#DEBHELPER#
+
+exit 0
