@@ -7,6 +7,8 @@ python-oslo.messaging (1.14.0-1) UNRELEASED; urgency=medium
   [ Thomas Goirand ]
   * Make the build reproducible. Thanks to Juan Picca <jumapico@gmail.com> for
     the bug report and patch (Closes: #788480).
+  * Added python3 support.
+  * Added oslo-messaging-zmq-receiver.init sysv-rc script.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 11 Jun 2015 23:37:49 +0200
 
